@@ -5,3 +5,4 @@ Hitprn - new site
 Pornmz - new site
 Seaporn - fix images
 fullxcinema - new site
+xHamster - fix listing
